# EconJM_auto_doc_gen

./: .gitignore  EconJM_status.xlsx  README.md  ~$EconJM_status.xlsx
0_media/: My Library.bib
JM_thoughts/: JavierGonzalez_JM_Tips.typ  conf.typ
automatization/: .env  JM_thoughts_analysis (Javier’s Mac mini's conflicted copy 2026-02-22).ipynb  JM_thoughts_analysis.ipynb  batched_chat_gpt.py  personalize_docs.ipynb  pyproject.toml  run_jupyter.bash
automatization/utils/: __init__.py  content_utils.py  file_ops.py  set_paths.py
data/: small_description.txt
data/app_context/: a_paris.txt  aalto_postdoc.txt  aist_1.txt  alicante.txt  american_u_1.txt  american_u_2.txt  amsterdam.txt  analysis_2.txt  andersen.txt  babson_1.txt  babson_2.txt  bank_port.txt  bank_slovakia.txt  bank_spain.txt  bates_1.txt  baylor.txt  berlinse.txt  berry_1.txt  berry_2.txt  bi.txt  bologna.txt  boston.txt  bowdoin.txt  cafoscari.txt  cal_state.txt  carleton.txt  carnie_melon_1.txt  carnie_melon_2.txt  cemfi.txt  cerdi.txt  cergeei.txt  chrisnew.txt  colby.txt  colegio_mx.txt  colgate_1.txt  colorado_col.txt  coppen.txt  cornell.txt  creighton.txt  crese.txt  (+104 more)
data/batches/: batches_history.csv  gen_cl.jsonl  gen_rs.jsonl  gen_ts.jsonl
other_docs/: other_info.txt
output_docs/: cl_docs_gpt-4.1-mini.csv  rs_docs_gpt-4.1-mini.csv  ts_docs_gpt-4.1-mini.csv
temp/: pse-motivation-letter-2025.doc
temp/namur/: application_form_for_a_scientific_position-1.doc
templates/base_text/: EU_cl.txt  cover_letter.txt  diversity_statement.txt  research_statement.txt  reseearch_statement.txt  (+1 more)
(+303 files in other folders)
