[project]
name = "automatization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "ipyparallel>=9.0.1",
    "ipython>=9.5.0",
    "ipython-genutils>=0.2.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openai>=1.107.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
